# pydavinci

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yaml  mypy.ini  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
css/: style.css
docs/: folder.md  index.md  marker.md  markercollection.md  mediapool.md  mediapoolitem.md  mediastorage.md  project.md  projectmanager.md  resolve.md  timeline.md  timelineitem.md
docs/css/: style.css
docs/examples/: premiereproxies.md
docs/settings/: index.md  project.md  timeline.md
docs/templates/python/material/: attribute.html  class.html  docstring.html  expression.html  function.html  signature.html
docs/templates/python/material/docstring/: attributes.html  other_parameters.html  parameters.html  raises.html  receives.html  returns.html  warns.html  yields.html
examples/: premiere_proxies.py  test.py
examples/premiereproxies/: index.html
folder/: index.html
marker/: index.html
markercollection/: index.html
mediapool/: index.html
mediapoolitem/: index.html
mediastorage/: index.html
project/: index.html
projectmanager/: index.html
pydavinci/: __init__.py  connect.py  exceptions.py  logger.py  main.py  pyremoteobject.py  resolve.py  test.py  utils.py
pydavinci/wrappers/: _basewrappers.py  _resolve_stubs.pyi  folder.py  gallery.py  gallerystill.py  gallerystillalbum.py  marker.py  mediapool.py  mediapoolitem.py  mediastorage.py  project.py  projectmanager.py  resolve.py  timeline.py  timelineitem.py
pydavinci/wrappers/settings/: components.py  constructor.py  map.py  map_project.py  settings.py  validator.py
resolve/: index.html
search/: search_index.json
settings/: index.html
settings/project/: index.html
settings/timeline/: index.html
src/pydavinci/: __init__.py  connect.py  exceptions.py  logger.py  main.py  pyremoteobject.py  utils.py
src/pydavinci/wrappers/: _basewrappers.py  _resolve_stubs.pyi  folder.py  gallery.py  gallerystill.py  gallerystillalbum.py  marker.py  mediapool.py  mediapoolitem.py  mediastorage.py  project.py  projectmanager.py  resolve.py  timeline.py  timelineitem.py
src/pydavinci/wrappers/settings/: components.py  constructor.py  map.py  validator.py
tests/: 1user_test.py  2settings_test.py  3gallery_test.py  README.md  user_test.py
tests/videos/: tears_of_steel_1080p_V1-0002.mov  tears_of_steel_1080p_V1-0003.mov  tears_of_steel_1080p_V1-0004.mov  tears_of_steel_1080p_V1-0005.mov  tears_of_steel_1080p_V1-0006.mov  tears_of_steel_1080p_V1-0007.mov  tears_of_steel_1080p_V1-0008.mov
timeline/: index.html
timelineitem/: index.html
