[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
implicit_reexport = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true
ignore_missing_imports = true

[tool.black]
line_length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
