[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydavinci"
dynamic = ["version"]
description = "A Davinci Resolve API Wrapper"
readme = "README.md"
license = ""
requires-python = ">=3.6.0,<4.0.0"
authors = [
    { name = "Pedro Labonia", email = "pedromslabonia@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "loguru>=0.6.0",
    "pydantic>=1.9.0",
    "typing_extensions>=4.1.1",
]

[project.urls]
Homepage = "https://github.com/pedrolabonia/pydavinci"
Source = "https://github.com/pedrolabonia/pydavinci"
Documentation = "https://pedrolabonia.github.io/pydavinci/resolve"
Changelog = "https://github.com/pedrolabonia/pydavinci/tags"

[tool.hatch.version]
path = "src/pydavinci/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pydavinci",
]

[tool.mypy]
strict = true
implicit_reexport = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true
ignore_missing_imports = true

[tool.black]
line_length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
