[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydavinci-18"
dynamic = ["version"]
description = "Fork of PyDavinci supporting Resolve 18"
readme = "README.md"
license = ""
requires-python = ">=3.10.0,<4.0.0"
authors = [
    { name = "Caleb Trevatt", email = "sk188okj@duck.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "loguru>=0.6.0",
    "pydantic>=1.9.0",
    "typing_extensions>=4.1.1",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "ruff",
    "pre-commit",
    "pytest",
]
docs = [
    "pydavinci[dev]",
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/in03/pydavinci"
Source = "https://github.com/in03/pydavinci"
Documentation = "https://in03.github.io/pydavinci/resolve"
Changelog = "https://github.com/in03/pydavinci/tags"

[tool.hatch.version]
path = "src/pydavinci/__init__.py"

[tool.hatch.envs.docs]
detached = true
dependencies = [
    "pydavinci[docs]"
]
[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "pydavinci",
]
[tool.hatch.build.targets.wheel]
include = [
    "pydavinci",
]

[tool.mypy]
strict = true
implicit_reexport = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true
ignore_missing_imports = true

[tool.black]
line_length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"